send registration emails
