# apps/api/src/email/email.service.ts
@@ -9,6 +9,8 @@ import { ConfigEnum } from '../shared/config.enum'
 import { Student } from 'student/student'
 import { Schedule } from 'schedule/schedule'
 import { format } from 'date-fns'
+import { PoolService } from 'pool/pool.service'
+import { InstructorService } from 'instructor/instructor.service'
 @Injectable()
 export class EmailService {
   constructor(
@@ -16,6 +18,8 @@ export class EmailService {
     public readonly configService: ConfigService,
     public readonly userService: UserService,
     public readonly logger: Logger,
+    public readonly poolService: PoolService,
+    public readonly instructorService: InstructorService,
   ) {}
 
   public async sendResetPasswordLink(email: string): Promise<void> {
@@ -146,6 +150,41 @@ export class EmailService {
 </body>
 </html>
 </html>`,
+    }
+    return this.sendMail(msg)
+  }
+
+  public async sendReservationEmail(user: User, student: Student, schedule: Schedule): Promise<void> {
+    const formattedDateTime = format(schedule.startDateTime, 'MM/dd/yyyy hh:mm a')
+    const pool = await this.poolService.findOne(schedule.poolId)
+    const instructor = await this.instructorService.findOne(schedule.instructorId)
+    const msg = {
+      to: user.email,
+      from: 'no-reply@stansburyswim.com',
+      subject: 'Lesson Reservation Confirmation',
+      html: `<p>Splash!  ${student.name}'s lesson reservation for ${formattedDateTime} at ${pool.name} with ${instructor.name} is confirmed.  Please arrive at least 5 minutes prior to the lesson.  You may cancel this lesson online up to 24 hours before lesson time with no penalty.</p>											
+103 Lakeview: Enter pool area through the gate to the right of the garage. 180 Durfee: Walk down driveway and enter pool area between the two garages. Text or call Sarah with any questions 435-659-6307.											
+We are unable to cancel, refund, or reschedule a lesson within 24 hours of lesson time. You are welcome to send a replacement student if the scheduled student is unavailable. 											
+											
+<p>Policies and Tips:</p>											
+<ul>											
+<li>Pool addresses:  103 Lakeview, Stansbury Park, 5446 Lanyard Lane, Stansbury Park, and 180 E Durfee St, Grantsville.  When you schedule, be sure to note the location as well as date/time/instructor.</li>											
+<li>All lessons are private, with one-on-one instruction customized to the student's goals and skill level.</li>											
+<li>Lessons start and end promptly.  We advise arriving at least 5 minutes early to be ready for the lesson.</li>											
+<li>Please be considerate when parking.  Do not block driveways or mailboxes.</li>											
+<li>All lesson credits MUST be used in the season purchased.  All unused lesson credits will be forfeited with no refund.  Seasons typically end July 31.</li>											
+<li>Text "@stansswim1" to 81010 or visit remind.com/join/stansswim1 to receive text updates (including new schedule offerings and cancellations due to weather).</li>											
+<li>24-hour cancellation notice is required.  There is no charge to reschedule any lesson, if done more that 24 hours ahead of time.  Within 24 hours of lesson time, there will be a full charge on all lessons.  You are welcome to send a replacement student if the scheduled student is unavailable.  </li>											
+<li>Instructors are subject to change without notice.</li>											
+<li>We strongly prefer reusable swim diapers over disposable and sunscreen lotion over aerosol.</li>											
+<li>Recommended: Ages 3-5 20-40 Lessons, Ages 5+10-20 Lessons + Maintenance Program 1-3 times/week. </li>											
+<li>Give your child lots of love and encouragement between lessons.  Recognize his/her bravery and achievements.  Take pictures and video during the lesson.  Children love to watch themselves and gain confidence as they do so.</li>											
+</ul>											
+<p>See you soon! </br>The Stansbury Swim Team</p>											
+</body>											
+</html>											
+</body>											
+</html>											`,
     }
     return this.sendMail(msg)
   }
